--- a/src/style.css
+++ b/src/style.css
@@ -5,14 +5,12 @@
 
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
 .item:last-of-type {
   margin-bottom: 0;
+}
+
+.item:first-of-type {
+  margin-bottom: 10px;
 }
 
 .block {
